# whalers-league-opt

./: cheap_team.txt  main.ipynb  pyproject.toml  simulated_annealing.py  team.py  test.ipynb
data/: 2024_whalers_league_final_player_stats.csv
