[tool.poetry]
name = "whalers-league-opt"
version = "0.1.0"
description = "Using simulated annealing to determine the optimal team from the PL Whaler's League"
authors = ["pamsoulin <pamsoulin@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.2.4"
pandas = "^2.2.3"
ipykernel = "^6.29.5"
matplotlib = "^3.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
