[project]
name = "whalers-league-opt"
version = "0.1.0"
description = "Using simulated annealing to determine the optimal team from the PL Whaler's League"
authors = [{ name = "pamsoulin", email = "pamsoulin@gmail.com" }]
requires-python = ">=3.11,<4"
readme = "README.md"
dependencies = [
    "numpy>=2.2.4,<3",
    "pandas>=2.2.3,<3",
    "ipykernel>=6.29.5,<7",
    "matplotlib>=3.10.1,<4",
]

[tool.uv]
package = false

[build-system]
requires = ["uv_build>=0.10.3,<0.11.0"]
build-backend = "uv_build"
